plugins/kotlin/idea/tests/testData/checker/infos/PropertiesWithBackingFields.kt
// FIR_IDENTICAL
<symbolName descr="null" textAttributesKey="KOTLIN_BUILTIN_ANNOTATION">abstract</symbolName> class <symbolName descr="null" textAttributesKey="KOTLIN_ABSTRACT_CLASS">Test</symbolName>() {
    <symbolName descr="null" textAttributesKey="KOTLIN_BUILTIN_ANNOTATION">abstract</symbolName> val <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY">x</symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName>
    <symbolName descr="null" textAttributesKey="KOTLIN_BUILTIN_ANNOTATION">abstract</symbolName> val <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION">x1</symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>
    <symbolName descr="null" textAttributesKey="KOTLIN_BUILTIN_ANNOTATION">abstract</symbolName> val <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION">x2</symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName> <error descr="[ABSTRACT_PROPERTY_WITH_GETTER] Property with getter implementation cannot be abstract" textAttributesKey="ERRORS_ATTRIBUTES"><symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>() = 1</error>

    <error descr="[MUST_BE_INITIALIZED_OR_BE_ABSTRACT] Property must be initialized or be abstract" textAttributesKey="ERRORS_ATTRIBUTES">val <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY">a</symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName></error>
    <error descr="[MUST_BE_INITIALIZED_OR_BE_ABSTRACT] Property must be initialized or be abstract" textAttributesKey="ERRORS_ATTRIBUTES">val <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION">b</symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName></error> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>
    val <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY">c</symbolName> = 1

    val <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION">c1</symbolName></symbolName> = 1
      <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>
    val <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION">c2</symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName>
        <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>() = 1
    val <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION">c3</symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName>
        <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>() { return 1 }
    val <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION">c4</symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName>
        <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>() = 1
    <error descr="[MUST_BE_INITIALIZED] Property must be initialized" textAttributesKey="ERRORS_ATTRIBUTES">val <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION">c5</symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName></error>
        <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>() = <symbolName descr="null" textAttributesKey="KOTLIN_BACKING_FIELD_VARIABLE">field</symbolName> + 1

    <symbolName descr="null" textAttributesKey="KOTLIN_BUILTIN_ANNOTATION">abstract</symbolName> var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">y</symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName>
    <symbolName descr="null" textAttributesKey="KOTLIN_BUILTIN_ANNOTATION">abstract</symbolName> var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">y1</symbolName></symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>
    <symbolName descr="null" textAttributesKey="KOTLIN_BUILTIN_ANNOTATION">abstract</symbolName> var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">y2</symbolName></symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">set</symbolName>
    <symbolName descr="null" textAttributesKey="KOTLIN_BUILTIN_ANNOTATION">abstract</symbolName> var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">y3</symbolName></symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">set</symbolName> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>
    <symbolName descr="null" textAttributesKey="KOTLIN_BUILTIN_ANNOTATION">abstract</symbolName> var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">y4</symbolName></symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">set</symbolName> <error descr="[ABSTRACT_PROPERTY_WITH_GETTER] Property with getter implementation cannot be abstract" textAttributesKey="ERRORS_ATTRIBUTES"><symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>() = 1</error>
    <symbolName descr="null" textAttributesKey="KOTLIN_BUILTIN_ANNOTATION">abstract</symbolName> var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">y5</symbolName></symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName> <error descr="[ABSTRACT_PROPERTY_WITH_SETTER] Property with setter implementation cannot be abstract" textAttributesKey="ERRORS_ATTRIBUTES"><symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">set</symbolName>(<symbolName descr="null" textAttributesKey="KOTLIN_PARAMETER">x</symbolName>) {}</error> <error descr="[ABSTRACT_PROPERTY_WITH_GETTER] Property with getter implementation cannot be abstract" textAttributesKey="ERRORS_ATTRIBUTES"><symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>() = 1</error>
    <symbolName descr="null" textAttributesKey="KOTLIN_BUILTIN_ANNOTATION">abstract</symbolName> var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">y6</symbolName></symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName> <error descr="[ABSTRACT_PROPERTY_WITH_SETTER] Property with setter implementation cannot be abstract" textAttributesKey="ERRORS_ATTRIBUTES"><symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">set</symbolName>(<symbolName descr="null" textAttributesKey="KOTLIN_PARAMETER">x</symbolName>) {}</error>

    <error descr="[MUST_BE_INITIALIZED_OR_BE_ABSTRACT] Property must be initialized or be abstract" textAttributesKey="ERRORS_ATTRIBUTES">var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">v</symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName></error>
    <error descr="[MUST_BE_INITIALIZED_OR_BE_ABSTRACT] Property must be initialized or be abstract" textAttributesKey="ERRORS_ATTRIBUTES">var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">v1</symbolName></symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName></error> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>
    <error descr="[MUST_BE_INITIALIZED_OR_BE_ABSTRACT] Property must be initialized or be abstract" textAttributesKey="ERRORS_ATTRIBUTES">var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">v2</symbolName></symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName></error> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">set</symbolName>
    <error descr="[MUST_BE_INITIALIZED] Property must be initialized" textAttributesKey="ERRORS_ATTRIBUTES">var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">v3</symbolName></symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName></error> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>() = 1; <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">set</symbolName>
    var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">v4</symbolName></symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>() = 1; <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">set</symbolName>(<warning descr="[UNUSED_PARAMETER] Parameter 'x' is never used" textAttributesKey="NOT_USED_ELEMENT_ATTRIBUTES"><symbolName descr="null" textAttributesKey="KOTLIN_PARAMETER">x</symbolName></warning>){}

    <error descr="[MUST_BE_INITIALIZED] Property must be initialized" textAttributesKey="ERRORS_ATTRIBUTES">var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">v5</symbolName></symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName></error> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>() = 1; <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">set</symbolName>(<symbolName descr="null" textAttributesKey="KOTLIN_PARAMETER">x</symbolName>){<symbolName descr="null" textAttributesKey="KOTLIN_BACKING_FIELD_VARIABLE"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">field</symbolName></symbolName> = <symbolName descr="null" textAttributesKey="KOTLIN_PARAMETER">x</symbolName>}
    <error descr="[MUST_BE_INITIALIZED] Property must be initialized" textAttributesKey="ERRORS_ATTRIBUTES">var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">v6</symbolName></symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName></error> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>() = <symbolName descr="null" textAttributesKey="KOTLIN_BACKING_FIELD_VARIABLE"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">field</symbolName></symbolName> + 1; <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">set</symbolName>(<warning descr="[UNUSED_PARAMETER] Parameter 'x' is never used" textAttributesKey="NOT_USED_ELEMENT_ATTRIBUTES"><symbolName descr="null" textAttributesKey="KOTLIN_PARAMETER">x</symbolName></warning>){}

  <error descr="[MUST_BE_INITIALIZED_OR_BE_ABSTRACT] Property must be initialized or be abstract" textAttributesKey="ERRORS_ATTRIBUTES">var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">v9</symbolName></symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName></error> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">set</symbolName>
  <error descr="[MUST_BE_INITIALIZED_OR_BE_ABSTRACT] Property must be initialized or be abstract" textAttributesKey="ERRORS_ATTRIBUTES">var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY_CUSTOM_PROPERTY_DECLARATION"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">v10</symbolName></symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName></error> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">get</symbolName>

}

<symbolName descr="null" textAttributesKey="KOTLIN_BUILTIN_ANNOTATION">open</symbolName> class <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Super</symbolName>(<warning descr="[UNUSED_PARAMETER] Parameter 'i' is never used" textAttributesKey="NOT_USED_ELEMENT_ATTRIBUTES"><symbolName descr="null" textAttributesKey="KOTLIN_PARAMETER">i</symbolName></warning> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName>)

class <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">TestPCParameters</symbolName>(<symbolName descr="null" textAttributesKey="KOTLIN_PARAMETER">w</symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName>, <warning descr="[UNUSED_PARAMETER] Parameter 'x' is never used" textAttributesKey="NOT_USED_ELEMENT_ATTRIBUTES"><symbolName descr="null" textAttributesKey="KOTLIN_PARAMETER">x</symbolName></warning> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName>, val <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY">y</symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName>, var <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY"><symbolName descr="null" textAttributesKey="KOTLIN_MUTABLE_VARIABLE">z</symbolName></symbolName> : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">Int</symbolName>) : <symbolName descr="null" textAttributesKey="KOTLIN_CONSTRUCTOR">Super</symbolName>(<symbolName descr="null" textAttributesKey="KOTLIN_PARAMETER">w</symbolName>) {

  val <symbolName descr="null" textAttributesKey="KOTLIN_INSTANCE_PROPERTY">xx</symbolName> = <symbolName descr="null" textAttributesKey="KOTLIN_PARAMETER">w</symbolName>

  <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">init</symbolName> {
    <symbolName descr="null" textAttributesKey="KOTLIN_PARAMETER">w</symbolName> + 1
  }

  fun <symbolName descr="null" textAttributesKey="KOTLIN_FUNCTION_DECLARATION">foo</symbolName>() = <error descr="[UNRESOLVED_REFERENCE] Unresolved reference: x" textAttributesKey="WRONG_REFERENCES_ATTRIBUTES">x</error>

}
